TEST_PROGRAMS/VALID/05/if_elifstar_reg_brace.go
/* If statements */

package main

func main() {
	x := true

	if y {
		//Do nothing
	} else if x {
		//Do nothing
	} else if x {
		//Do nothing
	} else if x {
		//Do nothing
	}

}
