TEST_PROGRAMS/INVALID/03/invalid_if1.go
package main
func main() {
	if x + y {
	        // statements
	} else if x {

	} else {

	}
	if {
		
	}
}
